# gym-backend

./: Dockerfile  docker-compose.yml  pyproject.toml
src/api/auth/: auth.py  permissions.py
src/api/v1/: urls.py
src/api/v1/attendance/: apps.py  filters.py  serializers.py  urls.py  views.py
src/api/v1/group_permission/: apps.py  serializers.py  urls.py  views.py
src/api/v1/subscription/: apps.py  filters.py  serializers.py  urls.py  views.py
src/api/v1/trainings/: apps.py  filters.py  serializers.py  urls.py  views.py
src/api/v1/user/: apps.py  serializers.py  urls.py  views.py
src/apps/attendance/: admin.py  models.py  tests.py
src/apps/attendance/migrations/: 0001_initial.py  0002_initial.py
src/apps/subscriptions/: admin.py  managers.py  models.py  tests.py
src/apps/subscriptions/migrations/: 0001_initial.py  0002_initial.py
src/apps/trainings/: admin.py  apps.py  models.py  tests.py
src/apps/trainings/migrations/: 0001_initial.py  0002_initial.py
src/apps/user/: managers.py  models.py  tests.py
src/apps/user/migrations/: 0001_initial.py
src/config/: settings.py  urls.py
